Do not try to write flags to the server that it does not support.

Can happen even with servers that do support arbitrary flags, but where
you lack access rights to change them in a specific folder.

BUG: 259160